--- a/docs/content/about-iota/iota-wallet/how-to/test.mdx
+++ b/docs/content/about-iota/iota-wallet/how-to/test.mdx
@@ -1,14 +1,18 @@
 # Use IOTA Wallet for Testing
 
-You can use IOTA Wallet with various IOTA networks to test new or updated apps on IOTA. Besides the IOTA Mainnet, IOTA Wallet supports connecting to IOTA Testnet, IOTA Devnet, a Local network, or a Custom RPC URL on a network you create.
-
-To learn how to create a local network, see [Create a Local IOTA Network](#).
+You can use IOTA Wallet with various IOTA networks to test new or updated apps on IOTA. Besides the IOTA Mainnet, IOTA Wallet supports connecting to IOTA Testnet, IOTA Devnet, a [Local network](../../../developer/getting-started/local-network.mdx), or a Custom RPC URL on a network you create.
 
 ## Change the Active Network Connection
 
-1. Click the menu (three bars) at the top-right corner of the IOTA Wallet interface.
-2. Click **Network**.
+1. Click the settings cog icon in the top-right corner of the IOTA Wallet
+2. Click `Network`..
+
+   ![Network](/img/about-iota/iota-wallet/how-to/test/click-network.png)
+
 3. Click the network you want to use. A checkmark displays next to the active network.
+
+   ![Select Network](/img/about-iota/iota-wallet/how-to/test/select-network.png)
+
 
 ## Get IOTA Tokens for Testing
 
@@ -18,22 +22,12 @@ When you first open the wallet, you have no coins in it. You can add test IOTA c
 
 1. After installing the wallet extension, select one of the test networks, either Devnet or Testnet.
 2. If your wallet has no coins, a button will display to request tokens.
-3. Click **Request Devnet IOTA tokens** or **Request Testnet IOTA tokens**, depending on the network you chose.
-4. Once you have coins in your wallet, the button moves to the **Settings** page. To access it, click the three bars in the top-right corner of the wallet interface.
+3. Click `Request Devnet IOTA tokens` or `Request Testnet IOTA tokens`, depending on the network you chose.
+4. Once you have coins in your wallet, the button moves to the `Settings` page. To access it, click the cog icon in the top-right corner of the wallet interface.
 
-> **Note:** You can request IOTA coins only once every 60 minutes. After clicking the button, IOTA test tokens will appear in your wallet under the **Coins** tab.
+:::note Limits
 
-### To Get IOTA Test Coins Through Discord
+You can request IOTA coins only once every 60 minutes.
+After clicking the button, IOTA test tokens will appear in your wallet under the `Coins` tab.
 
-1. Click **Coins** in the wallet.
-2. Click the small clipboard icon next to your address to copy it. The address, which starts with `0x`, is near the top of the wallet.
-3. Go to the Discord faucet channel for the network you're using:
-    - [Devnet Faucet](#) channel on Discord.
-    - [Testnet Faucet](#) (This channel may not always be available).
-4. Use the `!faucet` command with your wallet address to request tokens:
-
-```
-!faucet 0x6c04ed5110554acf59ff1b535129548dd9a0c741
-```
-   Replace the address in the command with your own wallet address.
-5. The channel bot will confirm your request with a message.
+:::
