--- a/docs/content/about-iota/iota-wallet/how-to/test.mdx
+++ b/docs/content/about-iota/iota-wallet/how-to/test.mdx
@@ -1,33 +1,37 @@
+---
+description: A guide on how to use IOTA Wallet for testing on different IOTA networks, including how to switch networks and obtain test IOTA tokens.
+---
+
 # Use IOTA Wallet for Testing
 
-You can use IOTA Wallet with various IOTA networks to test new or updated apps on IOTA. Besides the IOTA Mainnet, IOTA Wallet supports connecting to IOTA Testnet, IOTA Devnet, a [Local network](../../../developer/getting-started/local-network.mdx), or a Custom RPC URL on a network you create.
+You can test apps on the IOTA network using IOTA Wallet. Besides the IOTA Mainnet, the wallet supports connections to IOTA Testnet, IOTA Devnet, a [Local network](../../../developer/getting-started/local-network.mdx), or a Custom RPC URL for a network you create.
 
 ## Change the Active Network Connection
 
-1. Click the settings cog icon in the top-right corner of the IOTA Wallet
-2. Click `Network`..
+To switch the network in your IOTA Wallet:
+
+1. Click the settings cog icon in the top-right corner of the IOTA Wallet.
+2. Select `Network`.
 
    ![Network](/img/about-iota/iota-wallet/how-to/test/click-network.png)
 
-3. Click the network you want to use. A checkmark displays next to the active network.
+3. Choose the network you want to connect to. A checkmark will appear next to the selected network.
 
    ![Select Network](/img/about-iota/iota-wallet/how-to/test/select-network.png)
 
-
 ## Get IOTA Tokens for Testing
 
-When you first open the wallet, you have no coins in it. You can add test IOTA coins to your wallet for testing purposes. These tokens have no value and can only be used on the IOTA network you obtained them from, such as Devnet or Testnet.
+When you first open the wallet, it will have no coins. You can add test IOTA coins for testing purposes. These test tokens have no real-world value and can only be used on the specific network they were obtained from, like Devnet or Testnet.
 
-### To Get IOTA Test Coins Using the Wallet
+### Request IOTA Test Coins Using the Wallet
 
-1. After installing the wallet extension, select one of the test networks, either Devnet or Testnet.
-2. If your wallet has no coins, a button will display to request tokens.
-3. Click `Request Devnet IOTA tokens` or `Request Testnet IOTA tokens`, depending on the network you chose.
-4. Once you have coins in your wallet, the button moves to the `Settings` page. To access it, click the cog icon in the top-right corner of the wallet interface.
+1. After installing the wallet extension, choose either Devnet or Testnet from the network options.
+2. If your wallet has no coins, a button will appear allowing you to request tokens.
+3. Click `Request Devnet IOTA tokens` or `Request Testnet IOTA tokens`, based on the network you're using.
+4. Once tokens are in your wallet, the button to request more will move to the `Settings` page. Access it by clicking the cog icon in the top-right corner of the wallet interface.
 
 :::note Limits
 
-You can request IOTA coins only once every 60 minutes.
-After clicking the button, IOTA test tokens will appear in your wallet under the `Coins` tab.
+You can request test IOTA tokens only once every 60 minutes. After requesting, the tokens will appear in your wallet under the `Coins` tab.
 
 :::
