feat(devx): small edits

--- a/docs/content/about-iota/iota-wallet/how-to/integrate-ledger.mdx
+++ b/docs/content/about-iota/iota-wallet/how-to/integrate-ledger.mdx
@@ -1,19 +1,8 @@
-# Use IOTA Wallet with a Ledger Wallet
+# Use IOTA Wallet with a Ledger Device
 
 This guide describes how to use IOTA Wallet with your Ledger device. When you connect your Ledger device, you can add up to 10 accounts from your device to IOTA Wallet. You can then use the account in IOTA Wallet just like any other account, but with the added protection of storing your private keys in a cold storage wallet. This gives you complete control of the private keys for your digital assets.
 
 To use your device with IOTA Wallet, follow the steps below to install the IOTA app on the device, add one or more accounts from the device to IOTA Wallet, and authorize the connection to IOTA Wallet when you use the account to perform transactions on the IOTA network.
-
-## Table of Contents
-
-1. [Requirements](#requirements)
-2. [Install the IOTA app on your Ledger device](#install-the-IOTA-app-on-your-ledger-device)
-3. [Import accounts from your device to IOTA Wallet](#import-accounts-from-your-device-to-IOTA-wallet)
-4. [View account balance](#view-account-balance)
-5. [Receive digital assets using IOTA Wallet](#receive-digital-assets-using-IOTA-wallet)
-6. [Send digital assets using IOTA Wallet](#send-digital-assets-using-IOTA-wallet)
-7. [Stake IOTA using IOTA Wallet](#stake-IOTA-using-IOTA-wallet)
-8. [Support for IOTA Wallet](#support-for-IOTA-wallet)
 
 ## Requirements
 
