feat(devx): small edits

--- a/docs/content/about-iota/iota-wallet/how-to/get-test-tokens.mdx
+++ b/docs/content/about-iota/iota-wallet/how-to/get-test-tokens.mdx
@@ -1,8 +1,7 @@
 ---
 description: A guide on how to use IOTA Wallet for testing on different IOTA networks, including how to switch networks and obtain test IOTA tokens.
 ---
-
-# Use IOTA Wallet for Testing
+# Get Test Tokens
 
 You can test apps on the IOTA network using IOTA Wallet. Besides the IOTA Mainnet, the wallet supports connections to IOTA Testnet, IOTA Devnet, a [Local network](../../../developer/getting-started/local-network.mdx), or a Custom RPC URL for a network you create.
 
