feat(devx): add link

--- a/docs/content/about-iota/iota-wallet/how-to/integrate-ledger.mdx
+++ b/docs/content/about-iota/iota-wallet/how-to/integrate-ledger.mdx
@@ -10,7 +10,7 @@ Before connecting your device to IOTA Wallet:
 
 - Install the latest version of [IOTA Wallet](#) from the Chrome Web Store.
 - Set up and configure your Ledger device, including updating to the latest firmware.
-- Install Ledger Live and confirm that you can connect your device to Ledger Live.
+- Install [Ledger Live](https://www.ledger.com/ledger-live) and confirm that you can connect your device to Ledger Live.
 
 ## Install the IOTA App on Your Ledger Device
 
