fix(devx): address PR comments

--- a/docs/content/developer/getting-started/local-network.mdx
+++ b/docs/content/developer/getting-started/local-network.mdx
@@ -13,7 +13,7 @@ test token faucet.
 
 ## Prerequisites
 
-You should [install the IOTA CLI tool](iota-install.mdx) to interact with the local node.
+You should [install the IOTA CLI tool](install-iota.mdx) to interact with the local node.
 
 ## Start a Local Network
 
