--- a/docs/content/about-iota/iota-wallet/how-to/stake.mdx
+++ b/docs/content/about-iota/iota-wallet/how-to/stake.mdx
@@ -64,6 +64,16 @@ Stakes that have not yet begun earning rewards cannot be withdrawn. You will be 
 
 2. Choose the validator from which you want to withdraw.
 
-3. Click `Unstake IOTA`, then confirm by selecting `Unstake Now`.
+   ![Current Stake List](/img/about-iota/iota-wallet/how-to/stake/current-stake-list.png)
 
-(TODO: Add screenshot on 26/09)
+3. Click on the `Unstake` button.
+
+   ![Unstake Button](/img/about-iota/iota-wallet/how-to/stake/unstake-button.png)
+
+4. Review the details and click `Unstake`.
+
+   ![Unstake](/img/about-iota/iota-wallet/how-to/stake/unstake.png)
+ 
+5. Review the transaction details.
+
+   ![Review Transaction](/img/about-iota/iota-wallet/how-to/stake/verify-stake.png)
