feat(devx): edits

--- a/docs/content/about-iota/iota-wallet/how-to/basics.mdx
+++ b/docs/content/about-iota/iota-wallet/how-to/basics.mdx
@@ -44,7 +44,7 @@ To review your transaction history:
 
    ![Transaction Details](/img/about-iota/iota-wallet/how-to/basics/transactions.png)
 
-## View and Manage Your NFTs (TODO MINT AND DISPLAY)
+## View and Manage Your NFTs
 
 To view and manage your NFTs, follow these steps:
 
