--- a/docs/content/about-iota/iota-wallet/how-to/integrate-ledger.mdx
+++ b/docs/content/about-iota/iota-wallet/how-to/integrate-ledger.mdx
@@ -1,36 +1,39 @@
+---
+description: A guide on how to use IOTA Wallet with a Ledger device to manage accounts, send, receive, and stake digital assets securely.
+---
+
 # Use IOTA Wallet with a Ledger Device
 
-This guide describes how to use IOTA Wallet with your Ledger device. When you connect your Ledger device, you can add up to 10 accounts from your device to IOTA Wallet. You can then use the account in IOTA Wallet just like any other account, but with the added protection of storing your private keys in a cold storage wallet. This gives you complete control of the private keys for your digital assets.
-
-To use your device with IOTA Wallet, follow the steps below to install the IOTA app on the device, add one or more accounts from the device to IOTA Wallet, and authorize the connection to IOTA Wallet when you use the account to perform transactions on the IOTA network.
+This guide walks you through using IOTA Wallet with your Ledger device. By connecting your Ledger, you can add up to 10 accounts to IOTA Wallet and use them like any other account.
+The added benefit is that your private keys remain securely stored in your Ledger, a cold storage wallet, giving you full control over your assets.
 
 ## Requirements
 
-Before connecting your device to IOTA Wallet:
+Before connecting your Ledger device to IOTA Wallet, ensure the following:
 
 - Install the latest version of [IOTA Wallet](#) from the Chrome Web Store.
-- Set up and configure your Ledger device, including updating to the latest firmware.
-- Install [Ledger Live](https://www.ledger.com/ledger-live) and confirm that you can connect your device to Ledger Live.
+- Set up your Ledger device and update it to the latest firmware.
+- Install [Ledger Live](https://www.ledger.com/ledger-live) and confirm that your device can connect successfully.
 
 ## Install the IOTA App on Your Ledger Device
 
-You can install the IOTA app on your Ledger device from the App Catalog in Ledger Live.
-
-1. Unlock your device.
-2. Open Ledger Live and click **My Ledger** in the left panel.
-3. Press both buttons on the device to allow the secure connection with Ledger.
-4. In the App Catalog, search for **IOTA**.
-5. Click **Install** to install the IOTA app on your device.
-6. Your device will show a message indicating the installation progress.
-
-## Import Accounts from Your Device to IOTA Wallet
-
-To connect your device to IOTA Wallet and import accounts:
+To use IOTA Wallet with Ledger, install the IOTA app on your device through Ledger Live.
 
 1. Unlock your Ledger device.
-2. Select the `IOTA` app on the device and press both buttons to start it.
-3. Quit Ledger Live if it's still running.
-4. Open the [IOTA Wallet](#TODO ADD LINK) and enter your password.
+2. Open Ledger Live and navigate to **My Ledger** in the left panel.
+3. Press both buttons on the device to approve the secure connection.
+4. In the App Catalog, search for **IOTA**.
+5. Click **Install** to download the IOTA app to your device.
+6. Your device will show the installation progress.
+
+## Import Accounts from Your Ledger Device
+
+To import accounts from your Ledger into IOTA Wallet:
+
+1. Unlock your Ledger device.
+2. Open the `IOTA` app on your Ledger and press both buttons to start it.
+3. Close Ledger Live if it is still running.
+4. Open [IOTA Wallet](#TODO ADD LINK) and enter your password.
 5. Go to `Accounts` by clicking on the address at the top of the `Home` section.
 
    ![Accounts](/img/about-iota/iota-wallet/how-to/multi-account/navigate-to-accounts.png)
@@ -38,8 +41,8 @@ To connect your device to IOTA Wallet and import accounts:
 6. Click `Add Profile`.
 
    ![Add Profile](/img/about-iota/iota-wallet/how-to/multi-account/click-add-profile.png)
- 
-7. Click on the `Ledger` button in the `Import from Ledger` section.
+
+7. Select the `Ledger` button from the `Import from Ledger` section.
 
    ![Import From Ledger](/img/about-iota/iota-wallet/how-to/ledger/import-from-ledger.png)
 
@@ -47,79 +50,78 @@ To connect your device to IOTA Wallet and import accounts:
 
    ![Connect Ledger Wallet](/img/about-iota/iota-wallet/how-to/ledger/connect-ledger-wallet.png)
 
-9. Choose the wallet(s) to import to IOTA Wallet and click `Next`.
+9. Choose the wallets you want to import into IOTA Wallet, then click `Next`.
 
    ![Select Wallets](/img/about-iota/iota-wallet/how-to/ledger/select-wallets.png)
 
-10. Enter your password and click on `Verify`
+10. Enter your password and click `Verify`.
 
-   ![Verify Password](/img/about-iota/iota-wallet/how-to/ledger/verify-password.png)
+![Verify Password](/img/about-iota/iota-wallet/how-to/ledger/verify-password.png)
 
-IOTA Wallet will display the accounts you selected on the `Manage Accounts` screen under the `Ledger` cluster.
+Your imported Ledger accounts will appear under the `Ledger` cluster on the `Manage Accounts` screen.
 
 ## View Account Balance
 
-You can view the balance for an account in IOTA Wallet on the **Coins** tab. The coins and IOTA stake displayed are for only the selected account address.
+To view your account balance in IOTA Wallet, go to the **Coins** tab. The balance and staked IOTA displayed are for the selected account.
 
-To view coins and tokens in your account imported from Ledger, select an account with **LEDGER** next to it. To view NFTs for the account, click the **NFTs** tab.
+For accounts imported from Ledger, select the account labeled with **LEDGER** to view its coins and tokens. To see NFTs, navigate to the **NFTs** tab.
 
-## Receive Digital Assets Using IOTA Wallet 
+## Receive Digital Assets Using IOTA Wallet
 
-To receive cryptocurrency or NFTs in the IOTA Wallet, follow these steps:
-
-5. Go to `Accounts` by clicking on the address at the top of the `Home` section.
-
-   ![Accounts](/img/about-iota/iota-wallet/how-to/multi-account/navigate-to-accounts.png)
-
-1. Select the account to receive assets on.
-
-   ![Select Account](/img/about-iota/iota-wallet/how-to/ledger/select-account.png)
-
-3. Hit the receive arrow button next to the account balance.
-
-   ![Receive Button](/img/about-iota/iota-wallet/how-to/ledger/receive-button.png)
- 
-2. Copy your address or share the QR code to receive funds.
-
-   ![Receive QR](/img/about-iota/iota-wallet/how-to/ledger/receive-QR.png)
-
-## Send Digital Assets Using IOTA Wallet
-
-To send a digital asset from your Ledger account:
+To receive cryptocurrency or NFTs:
 
 1. Go to `Accounts` by clicking on the address at the top of the `Home` section.
 
    ![Accounts](/img/about-iota/iota-wallet/how-to/multi-account/navigate-to-accounts.png)
 
-2. Select the account to send assets from.
+2. Select the account you want to receive assets on.
 
    ![Select Account](/img/about-iota/iota-wallet/how-to/ledger/select-account.png)
 
-3. Click on the blue send button next to your balance.
+3. Click the receive arrow button next to the account balance.
+
+   ![Receive Button](/img/about-iota/iota-wallet/how-to/ledger/receive-button.png)
+
+4. Copy your address or share the QR code to receive funds.
+
+   ![Receive QR](/img/about-iota/iota-wallet/how-to/ledger/receive-QR.png)
+
+## Send Digital Assets Using IOTA Wallet
+
+To send digital assets from your Ledger account:
+
+1. Go to `Accounts` by clicking on the address at the top of the `Home` section.
+
+   ![Accounts](/img/about-iota/iota-wallet/how-to/multi-account/navigate-to-accounts.png)
+
+2. Select the account you want to send assets from.
+
+   ![Select Account](/img/about-iota/iota-wallet/how-to/ledger/select-account.png)
+
+3. Click the blue send button next to your balance.
 
    ![Send Button](/img/about-iota/iota-wallet/how-to/ledger/receive-button.png)
 
-4. Select the coin type, enter the desired amount to send and the recipient's address, then click `Review`.
-5. Input the recipient’s address and click `Review` to confirm.
+4. Select the coin type, enter the amount, and input the recipient's address. Click `Review` to confirm the details.
 
    ![Review](/img/about-iota/iota-wallet/how-to/basics/send-review.png)
 
-6. Once you verify the transaction details, click `Send Now ->` to complete the transfer.
+5. Once confirmed, click `Send Now ->` to complete the transfer.
 
    ![Send Review](/img/about-iota/iota-wallet/how-to/basics/send-now.png)
 
-7. Verify the transaction details on your Ledger device:
-    - Press the right button to see the full addresses used.
-    - Confirm the address matches the one in IOTA Wallet.
-    - Press both buttons to approve the transaction.
+6. On your Ledger device, verify the transaction details:
+   - Use the right button to scroll through and verify the addresses.
+   - Ensure the address on the Ledger matches the one in IOTA Wallet.
+   - Press both buttons to approve the transaction.
 
 ## Stake IOTA Using IOTA Wallet
 
-You can use IOTA Wallet to stake IOTA in your Ledger account, but you need to enable blind signing to approve staking transactions.
+To stake IOTA using a Ledger account, you need to enable blind signing on your device.
 
-1. Unlock your Ledger device and start the IOTA app.
-2. Enable Blind Signing by pressing the right button until `Blind signing` displays, then press both buttons to enable it.
-3. Open IOTA Wallet and select the Ledger account.
+1. Unlock your Ledger device and open the IOTA app.
+2. Enable Blind Signing by scrolling to `Blind signing` and pressing both buttons to activate it.
+3. Open IOTA Wallet and select the Ledger account you want to stake from.
 4. Click `Start Staking`.
 
    ![Start Staking](/img/about-iota/iota-wallet/how-to/stake/start-staking.png)
@@ -128,9 +130,8 @@ You can use IOTA Wallet to stake IOTA in your Ledger account, but you need to en
 
    ![Select Validator](/img/about-iota/iota-wallet/how-to/stake/select-validator.png)
 
-6. Enter the amount of IOTA you want to stake. Make sure to leave enough IOTA in your wallet for potential transaction fees, then confirm by clicking `Stake`.
+6. Enter the amount of IOTA you want to stake and ensure you leave enough for transaction fees. Click `Stake` to confirm.
 
    ![Set Stake Amount](/img/about-iota/iota-wallet/how-to/stake/set-stake-amount.png)
- 
-7. On your Ledger device, review the transaction details and press both buttons to approve the transaction.
 
+7. On your Ledger device, review the transaction details and press both buttons to approve the staking transaction.
