feat(docs): add quizzes to architecture/iota-security
Signed-off-by: salaheldinsoliman <salaheldin_sameh@aucegypt.edu>

--- a/docs/content/about-iota/iota-architecture/iota-security.mdx
+++ b/docs/content/about-iota/iota-architecture/iota-security.mdx
@@ -1,3 +1,6 @@
+import Quiz from '@site/src/components/Quiz';
+import {questions} from '../../../site/static/json/about-iota/iota-architecture/iota-security.json';
+
 # Security
 
 ## Assets
@@ -63,3 +66,7 @@ IOTA validators allow users to see all the assets they hold and the history of t
 ### Public Auditability
 
 All transactions and assets on IOTA are publicly visible. Users can use multiple addresses to keep their identity somewhat hidden (pseudonymity) for privacy. Users can also use third-party services that handle their assets for them, either with or without direct control over their private keys. Smart contracts with extra privacy features can also be provided by third parties to enhance user privacy.
+
+
+## Quizzes
+<Quiz questions={questions} />
