Fix imports and re-swizzle MDXContent for default components

--- a/docs/content/developer/iota-evm/getting-started/networks-and-chains.mdx
+++ b/docs/content/developer/iota-evm/getting-started/networks-and-chains.mdx
@@ -7,9 +7,9 @@ tags:
   - evm
 ---
 
-import { AddToMetaMaskButton } from '@theme/AddToMetaMaskButton';
-import { Networks } from '@theme/constant';
-import NetworkInfo from '@theme/NetworkInfo';
+import { AddToMetaMaskButton } from '@site/src/components/AddToMetaMaskButton';
+import { Networks } from '@site/src/components/constant';
+import NetworkInfo from '@site/src/components/NetworkInfo';
 
 # Networks & Chains
 
