--- a/docs/content/developer/iota-evm/getting-started/quick-start.mdx
+++ b/docs/content/developer/iota-evm/getting-started/quick-start.mdx
@@ -10,9 +10,7 @@ tags:
 
 import DeployAdmonition from '../../../_snippets/iota-evm/deploy_a_smart_contract.md';
 import MetamaskButtons from '../../../_snippets/iota-evm/metamask_buttons.mdx';
-import { Networks } from '@theme/constant';
-import Tabs from '@theme/Tabs';
-import TabItem from '@theme/TabItem';
+import { Networks } from '@site/src/components/constant';
 import Link from '@docusaurus/Link';
 
 # EVM Quickstart Guide
