--- a/docs/content/developer/iota-evm/getting-started/tools.mdx
+++ b/docs/content/developer/iota-evm/getting-started/tools.mdx
@@ -9,14 +9,12 @@ tags:
   - reference
 ---
 
-import Tabs from '@theme/Tabs';
-import TabItem from '@theme/TabItem';
-import { AddToMetaMaskButton } from '@theme/AddToMetaMaskButton';
+import { AddToMetaMaskButton } from '@site/src/components/AddToMetaMaskButton';
 import HardhatConfig from '../../../_snippets/iota-evm/hardhat_config.mdx';
-import { Networks } from '@theme/constant';
+import { Networks } from '@site/src/components/constant';
 import DeployAdmonition from '../../../_snippets/iota-evm/deploy_a_smart_contract.md';
-import { ChainId } from '@theme/ChainId';
-import NetworkInfo from '@theme/NetworkInfo';
+import { ChainId } from '@site/src/components/ChainId';
+import NetworkInfo from '@site/src/components/NetworkInfo';
 import OraclesContractData from '../../../_snippets/iota-evm/oracles_contract_data.mdx';
 
 # Compatible Tools
