--- a/docs/content/developer/iota-evm/how-tos/deploy-a-smart-contract.mdx
+++ b/docs/content/developer/iota-evm/how-tos/deploy-a-smart-contract.mdx
@@ -8,12 +8,10 @@ tags:
 image: /img/logo/WASP_logo_dark.png
 ---
 
-import { AddToMetaMaskButton } from '@theme/AddToMetaMaskButton';
+import { AddToMetaMaskButton } from '@site/src/components/AddToMetaMaskButton';
 import HardhatConfig from '../../../_snippets/iota-evm/hardhat_config.mdx';
 import MetamaskButtons from '../../../_snippets/iota-evm/metamask_buttons.mdx';
-import { Networks } from '@theme/constant';
-import Tabs from '@theme/Tabs';
-import TabItem from '@theme/TabItem';
+import { Networks } from '@site/src/components/constant';
 
 # Deploy a Smart Contract
 
