--- a/docs/content/developer/iota-evm/how-tos/send-funds-from-L1-to-L2.mdx
+++ b/docs/content/developer/iota-evm/how-tos/send-funds-from-L1-to-L2.mdx
@@ -8,11 +8,9 @@ tags:
   - how-to
 ---
 
-import Tabs from '@theme/Tabs';
-import TabItem from '@theme/TabItem';
-import { AddToMetaMaskButton } from '@theme/AddToMetaMaskButton';
+import { AddToMetaMaskButton } from '@site/src/components/AddToMetaMaskButton';
 import MetamaskButtons from '../../../_snippets/iota-evm/metamask_buttons.mdx';
-import { Networks } from '@theme/constant';
+import { Networks } from '@site/src/components/constant';
 
 # Send Funds From L1 to L2
 
