--- a/docs/content/_snippets/iota-evm/hardhat_config.mdx
+++ b/docs/content/_snippets/iota-evm/hardhat_config.mdx
@@ -1,7 +1,5 @@
 import CodeBlock from '@theme/CodeBlock';
-import { Networks } from '@theme/constant';
-import Tabs from '@theme/Tabs';
-import TabItem from '@theme/TabItem';
+import { Networks } from '@site/src/components/constant';
 
 <Tabs groupId='network' queryString>
 <TabItem value='iota_testnet' label='IOTA EVM Testnet'>
