--- a/docs/content/_snippets/iota-evm/metamask_buttons.mdx
+++ b/docs/content/_snippets/iota-evm/metamask_buttons.mdx
@@ -1,7 +1,5 @@
-import { AddToMetaMaskButton } from '@theme/AddToMetaMaskButton';
-import { Networks } from '@theme/constant';
-import Tabs from '@theme/Tabs';
-import TabItem from '@theme/TabItem';
+import { AddToMetaMaskButton } from '@site/src/components/AddToMetaMaskButton';
+import { Networks } from '@site/src/components/constant';
 
 <Tabs groupId='network' queryString>
 <TabItem value='iota' label='IOTA EVM'>
